# Timeboard

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  new_features.md  nginx.conf  planner-spec.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/core/: api.py  models.py  schemas.py  tasks.py
backend/core/migrations/: 0001_initial.py  0002_remove_time_horizon_field.py  0003_add_has_seen_tour.py  0004_calendar_sync_state.py  0005_change_calendar_event_unique_constraint.py  0006_subtask.py  0007_add_week_starts_on.py  0008_add_task_priority.py  0009_add_task_reschedule_count.py  0010_add_scheduling_windows.py
backend/core/services/: calendar.py  email.py  llm.py
backend/planner/: asgi.py  settings.py  urls.py  wsgi.py
backend/templates/socialaccount/: authentication_error.html
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.html  service-worker.ts
frontend/src/lib/: api.ts  parser.ts  tour.ts  types.ts
frontend/src/lib/components/: Board.svelte  Calendar.svelte  Column.svelte  Header.svelte  MobileToday.svelte  PlanModal.svelte  ProjectModal.svelte  QuickAddModal.svelte  SettingsModal.svelte  TaskCard.svelte  TaskEditModal.svelte
frontend/src/lib/stores/: auth.ts  projects.ts  settings.ts  tasks.ts  ui.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
